<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <SwitchPreference
        android:defaultValue="true"
        android:key="sound"
        android:summary="@string/sound_summary"
        android:title="@string/sound" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="vibrate"
        android:summary="@string/vibrate_summary"
        android:title="@string/vibrate" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="start_in_scan_mode"
        android:summary="@string/start_in_scan_mode_summary"
        android:title="@string/start_in_scan_mode" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="save_in_history"
        android:summary="@string/save_in_history_summary"
        android:title="@string/save_in_history" />
</PreferenceScreen>