<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:elevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:contentPadding="@dimen/card_content_padding">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/barcode_format"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/encoding_format"
                    android:layout_weight="1"/>
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/barcode_type"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/horizontal_line"
                android:layout_below="@id/barcode_format"
                android:background="?android:attr/listDivider"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontal_line"
            android:gravity="top|left"
            android:minLines="6"
            android:hint="@string/barcode_content_text_hint"
            android:id="@+id/content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content"
                android:layout_marginTop="100dp"
                style="@style/default_button_style"
                android:background="@drawable/btn_states"
                android:id="@+id/create"
                android:text="@string/create"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>